Support regex with multiple matches